fixed spacing of sections

--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,7 @@ ul {
 .heroInfo > p {
   font-family: "Barlow";
   line-height: 25px;
+  font-size: 1.5em;
 }
 
 .createPlan {
@@ -90,6 +91,7 @@ ul {
 }
 
 .collectionInfo {
+  margin-top: 10%;
   display: flex;
   position: relative;
   min-height: 50em;
@@ -329,7 +331,7 @@ a:hover {
 .commitment {
   display: flex;
   justify-content: space-around;
-  margin-top: 15%;
+  margin-top: 20%;
   min-height: 5em;
   padding: 0 3em;
 }
@@ -447,7 +449,7 @@ a:hover {
 }
 
 .howItWorks2 {
-  margin-top: 15%;
+  margin-top: 20%;
   padding: 100px;
   padding-top: 50px;
   background-color: #2c343e;
